# bot-shot

./: .gitignore  Arduino.cpp  Arduino.h  Basic Drive.sln  BotShot.sln  CMakeLists.txt  Controller.cpp  Controller.h  DeviceIDs.h  Display.cpp  Display.h  DriveBase.cpp  DriveBase.h  Enables.h  Launcher.cpp  Launcher.h  PIDController.cpp  PIDController.h  Pickup.cpp  Pickup.h  PixyController.cpp  PixyController.h  README.md  canableStart.sh  main.cpp  package.xml  run.sh  runBoth.sh  runInterface.sh  runMaster.sh
Basic Drive/: Basic Drive.csproj  Program.cs
Basic Drive/Config/: Display.cs  FieldControls.cs  Motors.cs
Basic Drive/Devices/: Drive.cs  Shooter.cs
Basic Drive/Utility/: Constants.cs  ControlsConfiguration.cs  Conversion.cs  MotorConfiguration.cs
BotShot/: BotShot.csproj  Program.cs
BotShot/Config/: Control.cs  DeviceIDs.cs  Display.cs  FieldControls.cs  Motors.cs  PixyCam.cs
BotShot/Devices/: DriveBase.cs  Pickup.cs  PixyCam.cs  Shooter.cs
BotShot/Properties/: AssemblyInfo.cs
BotShot/Utility/: Conversion.cs
launch/: masterLaunch.launch
scripts/: GraphicalUserInterface.py  PhysicsModel.py  WebCamViewer.py  constant.py
src/: Controller.cpp  Conversions.h  DeviceIDs.h  Display.cpp  DriveBase.cpp  DriveBase.h  Enables.h  Interface.cpp  Launcher.cpp  PIDController.h  Pickup.h  controller.cpp
